# PCB-ADR-Routing

./: .clang-format  .flake8  .gitignore  CMakeLists.txt  Makefile  README.md  valgrind_output.txt
.github/workflows/: lint.yml
LP/: Makefile  a.cpp  a.py
assets/Tile_exmaple/: baby.adr
case/1/: 1.adr  1.diff  1.drc  1.group  1.layer  1.set
case/2/: 2.adr  2.component  2.diff  2.drc  2.edge  2.group  2.layer  2.netlist  2.obs  2.odr  2.ser  2.set  2_DATA.clp
case/3/: 3.adr  3.component  3.diff  3.drc  3.edge  3.group  3.layer  3.netlist  3.obs  3.ser  3_DATA.clp
case/4/: 4.adr  4.component  4.diff  4.drc  4.edge  4.group  4.layer  4.netlist  4.obs
case/5/: 5.adr  5.component  5.drc  5.edge  5.group  5.layer  5.obs  5.ser  5_DATA.clp
case/6/: 6.adr  6.component  6.diff  6.drc  6.edge  6.group  6.layer  6.obs  6.ser  6_DATA.clp
case/7/: 7.adr  7.diff  7.drc  7.group  7.layer  7.netlist  7.obs
case/analyze/: count_net.py
case/b/: b_01.brd.obs  b_01.netlist  b_02.brd.obs  b_03.brd.obs  b_03.netlist  b_04.brd.obs  b_04.netlist  b_05.brd.obs  b_06.brd.obs  b_07.brd.obs  b_08.brd.obs  b_08.netlist  b_09.brd.obs  b_09.netlist  b_10.brd.obs  b_10.netlist  b_11.brd.obs  b_11.netlist  b_12.brd.obs  b_12.netlist  b_13.netlist  b_14.brd.obs  b_14.netlist  b_15.brd.obs  b_15.netlist  b_16.netlist  b_17.brd.obs  b_18.brd.obs  b_19.brd.obs  b_20.brd.obs  b_20.netlist
case/b_01/: b_01.brd._BOTTOM.gds  b_01.brd._S3.gds  b_01.brd._TOP.gds  b_01.brd.diff_output  b_01.brd.gds  b_01.diff  b_01.drc  b_01.group  b_01.layer  b_01.netlist  b_01.obs  b_01.set  b_01_brd.clp
case/b_02/: b_02.adr  b_02.component  b_02.diff  b_02.drc  b_02.edge  b_02.group  b_02.layer  b_02.netlist  b_02.obs
case/b_03/: b_03.adr  b_03.brd._BOTTOM.gds  b_03.brd._S3.gds  b_03.brd._TOP.gds  b_03.brd.gds  b_03.component  b_03.diff  b_03.drc  b_03.edge  b_03.group  b_03.layer  b_03.obs  b_03.set  b_03_brd.clp
case/b_04/: b_04.diff  b_04.drc  b_04.group  b_04.layer  b_04.netlist  b_04.obs  b_04.set
case/b_05/: b_05.adr  b_05.bdy  b_05.brd._BOTTOM.gds  b_05.brd._S3.gds  b_05.brd._TOP.gds  b_05.brd.diff_output  b_05.brd.gds  b_05.brd.grouprule  b_05.brd.rule  b_05.component  b_05.diff  b_05.drc  b_05.edge  b_05.group  b_05.layer  b_05.netlist  b_05.obs  b_05.ser  b_05.set  b_05_BOTTOM.gdt  b_05_S3.gdt  b_05_TOP.gdt  b_05_brd.clp
case/b_06/: b_06.adr  b_06.component  b_06.diff  b_06.drc  b_06.edge  b_06.group  b_06.layer  b_06.netlist  b_06.obs
case/b_07/: b_07.diff  b_07.drc  b_07.group  b_07.layer  b_07.netlist  b_07.obs
case/b_08/: b_08.adr  b_08.bdy  b_08.brd._BOTTOM.gds  b_08.brd._S3.gds  b_08.brd._S6.gds  b_08.brd._TOP.gds  b_08.brd.diff_output  b_08.brd.gds  b_08.component  b_08.diff  b_08.drc  b_08.edge  b_08.group  b_08.layer  b_08.netlist  b_08.obs  b_08.ser  b_08.set  b_08_brd.clp
case/b_09/: b_09.adr  b_09.brd._BOTTOM.gds  b_09.brd._S3.gds  b_09.brd._TOP.gds  b_09.brd.diff_output  b_09.brd.gds  b_09.component  b_09.diff  b_09.drc  b_09.edge  b_09.group  b_09.layer  b_09.netlist  b_09.obs  b_09.set  (+1 more)
docs/: example.adr  example.component  example.odr
inc/: allegro.hpp  basic_ds.hpp  component_data.hpp  gdt.hpp  graph.hpp  grid.hpp  io.hpp  log.hpp  math.hpp
scripts/: count_net.py  draw_nets_klayout.py  draw_nets_pins.py  draw_routing_plane.py  draw_tiles.py  draw_vertices.py  run.sh
src/: allegro.cpp  component_data.cpp  gdt.cpp  graph.cpp  grid.cpp  io.cpp  log.cpp  main.cpp  math.cpp
tests/: io_test.cpp  segment_test.cpp
(+112 files in other folders)
